--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "scripts": {
-    "console":"npx hardhat console --network localhost",
-    "deploy":"npx hardhat run scripts/sample-script.js --network localhost",
-    "compile":"npx hardhat compile",
-    "test":"npx hardhat test",
-    "account":"npx hardhat accounts"
+    "console": "npx hardhat console --network localhost",
+    "deploy": "npx hardhat run scripts/sample-script.js --network localhost",
+    "compile": "npx hardhat compile",
+    "test": "npx hardhat test",
+    "account": "npx hardhat accounts"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.2",
@@ -12,6 +12,7 @@
     "chai": "^4.3.4",
     "ethereum-waffle": "^3.3.0",
     "ethers": "^5.3.0",
-    "hardhat": "^2.3.0"
+    "hardhat": "^2.3.0",
+    "web3": "^1.3.6"
   }
 }
